<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_project" />

        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_team" />

        <item
            android:id="@+id/nav_message_received"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_message_received" />

        <item
            android:id="@+id/nav_message_sent"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_message_sent" />
    </group>
</menu>
