<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.marcinadd.projecty.Main2Activity">
    <item
        android:id="@+id/name"
        android:icon="@drawable/ic_label_white_24dp"
        android:orderInCategory="10"
        android:title="@string/project_name"
        app:showAsAction="always" />
    <item
        android:id="@+id/role_add"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="11"
        android:title="@string/add_role"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="12"
        android:title="@string/delete_project"
        app:showAsAction="ifRoom" />
</menu>