<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_project"
        android:name="com.marcinadd.projecty.ui.project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_project_list">
        <action
            android:id="@+id/action_nav_project_to_manageProjectFragment"
            app:destination="@+id/manageProjectFragment">
            <argument
                android:name="projectId"
                android:defaultValue="1L" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.marcinadd.projecty.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/manageProjectFragment"
        android:name="com.marcinadd.projecty.ui.project.manage.ManageProjectFragment"
        android:label="@string/menu_manage_project"
        tools:layout="@layout/content_manage_project">
        <argument
            android:name="projectId"
            android:defaultValue="1L"
            app:argType="long" />
    </fragment>
</navigation>