<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/username"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/manager_switch"
        app:layout_constraintStart_toEndOf="@+id/role_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/role_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/item_number"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@android:string/fingerprint_icon_content_description" />


    <ImageView
        android:id="@+id/delete_role_icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/delete"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manager_switch"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_remove" />

    <Switch
        android:id="@+id/manager_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:text="@string/manager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_role_icon"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
